--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -23,7 +23,8 @@ html {
     font-size: 14pt;
 
     background-color: rgb(250, 250, 250);
-    color: rgb(83, 91, 94);
+    color: rgb(4, 180, 4);
+    text-shadow: 1px 1px 1px 1px black;
 
     background-image: url(../img/bg.jpg);
     background-repeat: no-repeat;
@@ -58,7 +59,7 @@ header, main {
 
 /* Titelzeile */
 #titlebar {
-    color: rgb(145, 204, 229);
+    color: rgb(4, 180, 4);
     font-size: 260%;
     margin-bottom: 1rem;
 }
@@ -74,7 +75,7 @@ header, main {
 }
 
 #titlebar .appname {
-    color: rgb(83, 149, 176);
+    color: rgb(5, 250, 5);
 }
 
 /* Menüzeile */
@@ -86,7 +87,7 @@ header, main {
 
 /* Farben für Links */
 a, a:visited {
-    color: rgb(193, 33, 33);
+    color: rgb(5, 250, 5);
     text-decoration: none;
 }
 
