--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -23,8 +23,7 @@ html {
     font-size: 14pt;
 
     background-color: rgb(250, 250, 250);
-    color: rgb(4, 180, 4);
-    text-shadow: 1px 1px 1px 1px black;
+    color: white;
 
     background-image: url(../img/bg.jpg);
     background-repeat: no-repeat;
