--- a/src/main/webapp/css/form.css
+++ b/src/main/webapp/css/form.css
@@ -8,6 +8,41 @@ Dieser Quellcode ist lizenziert unter einer
 Creative Commons Namensnennung 4.0 International Lizenz.
 */
 
+input[type=text], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+input[type=password], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  width: 100%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+
 /*
  * Vertikal gestapelte Formulare
  */
@@ -27,25 +62,9 @@ form.stacked .side-by-side > * {
 }
 
 /* Container für nebeneinander liegende Elemente */
-form.stacked .side-by-side {
+.container {
     display: flex;
-}
-
-form.stacked .side-by-side > * {
-    margin-right: 0.25em;
-}
-
-form.stacked .side-by-side > *:last-child {
-    margin-right: 0;
-}
-
-/* Feldbezeichner */
-form.stacked label {
-    margin-top: 1em;
-}
-
-form.stacked label:first-of-type {
-    margin-top: 0;
+    justify-content: center;
 }
 
 /*
@@ -103,3 +122,13 @@ form .errors {
     margin-top: 1em;
     color: red;
 }
+
+
+
+
+
+
+
+
+
+
