--- a/src/main/webapp/css/form.css
+++ b/src/main/webapp/css/form.css
@@ -36,6 +36,10 @@ input[type=submit] {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  font-family: 'Quicksand', sans-serif;
+  font-size: 14pt;
+  color: white;
+  font-weight: bold;
 }
 
 input[type=submit]:hover {
@@ -122,6 +126,8 @@ form .errors {
     margin-top: 1em;
     color: red;
 }
+
+
 
 
 
