--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -36,7 +36,7 @@ html {
 }
 
 body {
-    
+    overflow-x: hidden;
 }
 
 @media (max-width: 768px) {
@@ -49,7 +49,6 @@ header {
     background: white;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     margin-bottom: 1rem;
-    position: sticky;
 }
 
 header, main {
@@ -76,6 +75,7 @@ header, main {
 #titlebar .appname {
     color: rgb(5, 250, 5);
 }
+
 .logo {
     position: absolute;
     display: inline-block;
@@ -83,8 +83,8 @@ header, main {
     
 }
 .logo img {
-    margin-right: 40px;
-    margin-top: -60px;
+    margin-right: 2em;
+    margin-top: -4em;
     width: 10em;
     float: right;
 }
@@ -104,6 +104,19 @@ a, a:visited {
 a:hover {
     text-decoration: underline;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
