--- a/src/main/webapp/css/task_edit.css
+++ b/src/main/webapp/css/task_edit.css
@@ -11,3 +11,7 @@ Creative Commons Namensnennung 4.0 International Lizenz.
 .margin {
     margin-bottom: 1em;
 }
+
+input::-webkit-calendar-picker-indicator {
+  display: none;
+}
